src/test/deca/syntax/invalid/Var.deca
// Description:
//    programme vide
//
// Resultats:
//    Erreur Syntaxique
//
// Historique:
//    cree le 11/01/2023

{

	int x == 3;
	
}
